# tinyVBD

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Sim/: Builder.cpp  Builder.h  MeshBuilder.cpp  MeshBuilder.h  Model.cpp  Model.h  Scene.h
assets/: bunny_tet.msh
collision/: BroadPhase.h  Contacts.h  Shape.h  Shape.hpp
common/: Application.cpp  Application.h  Debugger.hpp  MaterialParams.hpp  Math.hpp  Profiler.cpp  Profiler.h  Scene.cpp  Scene.h  Types.h  World.cpp  World.h
imgui_plugin/: DbgUI.hpp  PefMonitor.hpp
include/: AdjacencyCSR.hpp  CameraController.h  Helpers.h  Mesh.h  MeshBuilder.h  RenderHelper.hpp  Sample.h  ShaderManager.h  Types.h  VBDDynamics.h  World.h
include/collision/: BroadPhase.h
include/common/: MaterialParams.hpp  Types.h  World.h
include/mesh/: Mesh.h
include/raylib_plugin/: CameraController.h  ShaderManager.h
include/sample/: Sample.h
include/vbd/: VBDDynamics.h
mesh/: Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h
raylib_plugin/: CameraController.cpp  CameraController.h  RenderHelper.cpp  RenderHelper.h  RenderHelper.hpp  ShaderManager.h
resources/assets/: bunny.msh  out.msh
resources/shaders/: bunny.vs  rubber.fs
sample/: ISample.h  Sample.cpp  Sample.h  SampleRegistry.cpp  SampleRegistry.h  SampleRegistry.hpp  basic_cloth_example.cpp  basic_cloth_example.h  bunny.cpp  bunny.h  falling_bunny.hpp  hanging_cloth.hpp  main.cpp  rubber_ball.hpp
shaders/: blinnphong_fs.glsl  blinnphong_vs.glsl  cloth.fs  cloth.vs  floor.fs  floor.vs  shadow_blinn.fs  shadow_blinn.vs
sim/: Builder.cpp  Builder.h  Model.cpp  Model.h  Scene.cpp  Scene.h
solver/: AdjacencyCSR.hpp  ISolver.h  SimView.hpp  VBDDynamics.h
solver/VBD/: AdjacencyCSR.hpp  VBDDynamics.cpp  VBDDynamics.h  VBDSolver.cpp  VBDSolver.h
src/: BroadPhase.cpp  CameraController.cpp  Mesh.cpp  MeshBuilder.cpp  Sample.cpp  ShaderManager.cpp  VBDDynamics.cpp  World.cpp  main.cpp
src/collision/: BroadPhase.cpp
src/common/: World.cpp
src/mesh/: Mesh.cpp  MeshBuilder.cpp
src/raylib_plugin/: CameraController.cpp  ShaderManager.cpp
src/sample/: Sample.cpp  main.cpp
src/vbd/: VBDDynamics.cpp
